welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: identifier expected but integer literal found.
  	if (nums[i] == nums[i + 1] && nums[i + 1] == nums[1 + 2])
                                ^noTriples:9: error: ']' expected but '}' found.
} 
^